# PracticeTurkish

./: .gitignore  LICENSE  README.md  bot.py  clipboard.py  config.ini  csvdictionaryitem.py  dictionary.py  dictionaryitem.py  englishinput.py  filepath.py  jsondictionaryitem.py  languages.py  make_csv.py  make_dictionary.py  make_json.py  number.py  parse.py  practice.py  pyproject.toml  requirements.txt  requirements_dev.txt  russianinput.py  translation.py  turkishinput.py  turkrutdictionary.py  turkrutdictionaryitem.py
.github/workflows/: publish-to-pypi.yml
.github/workflows/.github/workflows/: publish-to-pypi.yml
CSV/: enru_example.csv  g_03.18.csv  glue_words.csv  questions.csv  time.csv  verbs.csv
practice_turkish/: csvdictionary.py  dictionary.py  filepath.py  make_csv.py  number.py  practice.py  to_telegram.py  translation.py  turkishinput.py
practice_turkish/dictionaries/: __init__.py  csvdictionary.py  dictionary.py  parse.py  telegram.py  turkrutdictionary.py
practice_turkish/languages/: __init__.py  clipboard.py  englishinput.py  languages.py  russianinput.py  turkishinput.py  validator.py
turkrut/: 1.verbs.txt  1.words.txt  3.words.txt  4.words.txt  500-appartments.txt  500-city.txt  500-dish.txt  500-food.txt  500-time.txt  6.words.txt  7.words.txt  9.words.txt  days_of_week.txt
