[tool.poetry]
name = "practice_turkish"
version = "1.4.1"
description = "A set of tools to practice your Turkish"
authors = ["Egor Fadeev <fadeevegor@yandex.ru>"]
readme = "README.md"
packages = [{include = "practice_turkish"}]
license = "MIT"
repository = "https://github.com/FadeevEgor/PracticeTurkish"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
rich = "^13.3.2"
requests = "^2.28.2"
inquirerpy = "^0.3.4"
prompt-toolkit = "^3.0.38"

[tool.poetry.scripts]
practice_turkish = "practice_turkish.practice:main"
translate = "practice_turkish.translation:main"
numbers = "practice_turkish.number:main"
new_dictionary = "practice_turkish.make_csv:main"
to_telegram = "practice_turkish.to_telegram:main"


[tool.pylint.message_control]
disable = [
    "duplicate-code",
    "cyclic-import",
    "invalid-name",
    "missing-module-docstring",
    "protected-access",
    "raise-missing-from",
    "redefined-builtin",
    "too-few-public-methods",
]

[tool.mypy]
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



